<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true" >

    <data>
        <variable
            name="viewModel"
            type="com.example.cw_3.model.PlayerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent0"
        tools:context=".PlayerActivity">

        <TextView
            android:id="@+id/textTitlePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3pt"
            android:paddingBottom="3pt"
            android:text="@string/titlePlayer"
            android:textAlignment="center"
            android:textColor="@color/main0"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/buttonBack"
            android:layout_width="62dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/main0"
            android:backgroundTint="@color/main0"
            android:backgroundTintMode="multiply"
            android:paddingTop="2.5pt"
            android:text="@string/viewBack"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textTitlePlayer"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/main0"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitlePlayer">

            <LinearLayout
                android:id="@+id/linearLayoutPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="27dp" />

                <TextView
                    android:id="@+id/textViewAudioTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4pt"
                    android:layout_marginVertical="4pt"
                    android:text="@{viewModel.audioName}"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="245dp" />

                <TextView
                    android:id="@+id/textViewSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/editTextNumberSpeed"
                    android:text="@{`Speed: `+String.valueOf(viewModel.audioSpeed)+`x`}"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="43dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/buttonPrev"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/text0"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/button1"
                        android:textColor="@color/main0" />

                    <TextView
                        android:id="@+id/buttonStart"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/text0"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/button2"
                        android:textColor="@color/main0" />

                    <TextView
                        android:id="@+id/buttonPause"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/text0"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/button3"
                        android:textColor="@color/main0" />

                    <TextView
                        android:id="@+id/buttonNext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/text0"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/button4"
                        android:textColor="@color/main0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="67dp"
                        android:layout_weight="3" />

                    <TextView
                        android:id="@+id/buttonStop"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:background="@color/text0"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/button5"
                        android:textColor="@color/main0" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="67dp"
                        android:layout_weight="3" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:layout_weight="3" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:maxHeight="20dp"
                    android:minHeight="20dp" />

                <TextView
                    android:id="@+id/textViewProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/editTextNumberSpeed"
                    android:paddingBottom="20dp"
                    android:text="@string/speedProgress"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/buttonBookmark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@color/text0"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/bookmark"
                    android:textColor="@color/main0"
                    android:textSize="20sp" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>